modify login form size to use rem instead of percentage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,8 @@
 
 .signin {
   background-color: lightblue;
-  height: 70vh;
-  width:  50vw;
+  height: 42.5rem ;
+  width:  30rem;
   
   border-radius: 25px;
   
