--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,10 +23,37 @@
   
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 
   position: relative;
+}
+
+.formtop{
+  height: 70%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.formmiddle{
+  height: 15%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.formbottom{
+  height: 15%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .loginlabel {
@@ -36,4 +63,14 @@
 
 .textinput {
   width: 80%;
+}
+
+.notOnIcon {
+  filter: grayscale(100%);
+  transition: filter 0.3s; 
+}
+
+.onIcon {
+  filter: grayscale(0%);
+  transition: filter 0.3s; 
 }
