--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,6 @@
   flex-direction: row;
   top : 0;
   left: 0;
-  flex-direction: row;
   width: 50%;
   height: 100%;
 }
@@ -148,4 +147,53 @@
 
 .exclude-start-end-roadmap {
   color: initial;
+}
+
+.profile{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.top-profile{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 35%;
+  background-color: lightblue
+}
+
+.profile-content{
+  position: absolute;
+  top: 15%;
+  left: 10%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 80%;
+  height: 75%;
+  background-color: whitesmoke;
+  border-radius: 2%;
+}
+
+.profile-pic{
+  height: 20%;
+  background-color: blue;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+}
+
+
+.profile-content-size{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.profile-text-editors{
+  width: 100%;
 }
