--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@
   position: fixed;
   top: 0;
   left: 0;
-
+  
   background-color: white;
 }
 
@@ -107,7 +107,7 @@
 .mainpage-lessons{
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 93%;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -115,7 +115,8 @@
 
 .lesson-content-layout{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content:space-between;
   top : 0;
   left: 0;
   width: 50%;
@@ -196,4 +197,13 @@
 
 .profile-text-editors{
   width: 100%;
+}
+
+
+.editor{
+  height: 100%;
+}
+
+.appbar{
+  height: 7%;
 }
